updated with controller and subsequent changes